arika/tests/trybuild/null_eop_in_polar_motion.stderr
error[E0277]: the trait bound `NullEop: PolarMotion` is not satisfied
  --> tests/trybuild/null_eop_in_polar_motion.rs:12:62
   |
12 |     let _w = Rotation::<Tirs, Itrs>::polar_motion(&tt, &utc, &NullEop);
   |              ------------------------------------            ^^^^^^^^ the trait `PolarMotion` is not implemented for `NullEop`
   |              |
   |              required by a bound introduced by this call
   |
   = help: the trait `PolarMotion` is implemented for `EopTable`
note: required by a bound in `cio_chain::<impl Rotation<arika::frame::Tirs, arika::frame::Itrs>>::polar_motion`
  --> src/earth/iau2006/cio_chain.rs
   |
   |     pub fn polar_motion<P>(tt: &Epoch<Tt>, utc: &Epoch<Utc>, eop: &P) -> Self
   |            ------------ required by a bound in this associated function
   |     where
   |         P: PolarMotion + ?Sized,
   |            ^^^^^^^^^^^ required by this bound in `cio_chain::<impl Rotation<Tirs, Itrs>>::polar_motion`
